--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+#profile-pic {
+  max-height: 40px; 
+  margin-right: 10px;
+}
+
 body {
   font-family: "Inter", sans-serif;
   
